--- a/student_meeting/pubspec.yaml
+++ b/student_meeting/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   http: ^1.2.1
   provider: ^6.1.2
   go_router: ^14.2.1
+  date_time_picker_widget: ^2.0.0
 
 dev_dependencies:
   flutter_test:
