--- a/student_meeting/pubspec.yaml
+++ b/student_meeting/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   provider: ^6.1.2
   go_router: ^14.2.1
   date_time_picker_widget: ^2.0.0
+  time_scheduler_table: ^1.0.0
+  booking_calendar: ^1.1.10
 
 dev_dependencies:
   flutter_test:
